--- a/hello.html
+++ b/hello.html
@@ -1,5 +1,9 @@
-<html>
-    <body>
-      <h1>Hello Extensions</h1>
-    </body>
+<!doctype html>
+<html lang="zh">
+  <head>
+    <meta charset="utf-8">
+  </head>
+  <body>
+    <h1>火火火三大制造</h1>
+  </body>
 </html>
