第一版基本完成

--- a/hello.html
+++ b/hello.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="utf-8">
   </head>
+  <style>
+    img {
+      display:block;
+      width:180px;
+      height:180px
+    }
+  </style>
   <body>
-    <h1>火火火三大制造</h1>
+    <img src="img/icon_128.png"/>
+    <script src="jquery-3.2.1.min.js"></script>
+    <script src="hello.js"></script>
   </body>
 </html>
